--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Munif Tanjim (https://muniftanjim.com)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "html-webpack-plugin": "^2.26.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
